# chip-8

./: .clang-format  .gitignore  .ignore  CMakeLists.txt  README.md  main.cpp
include/: chip8.h  constants.h  display.h  keypad.h  result.h
src/: CMakeLists.txt  chip8.cpp  display.cpp  keypad.cpp  main.cpp
